# cpp-pybind11-playground

./: .gitignore  README.md
add/: README.md  maths.cpp
add-cmake/: CMakeLists.txt  README.md
add-cmake/cmake~/: FindPybind11.cmake
add-cmake/src/: maths.cpp
add/src/: maths.cpp
classes/: CMakeLists.txt  README.md
classes/src/: main.cpp
eval-file/: CMakeLists.txt  README.md  helloworld.py  set-the-y.py  setDogName.py
eval-file-pyqt5/: CMakeLists.txt  README.md  pyqt5.py
eval-file-pyqt5-set-value/: CMakeLists.txt  README.md  input-number.py
eval-file-pyqt5-set-value/python/: input-number.py
eval-file-pyqt5-set-value/src/: main.cpp
eval-file-pyqt5/python/: pyqt5.py
eval-file-pyqt5/src/: main.cpp
eval-file-pyside6/: CMakeLists.txt
eval-file-pyside6/python/: message_box.py
eval-file-pyside6/src/: main.cpp
eval-file/python/: set-the-y.py
eval-file/src/: main.cpp
eval-pyside6-twice/: CMakeLists.txt  README.md
eval-pyside6-twice/src/: main.cpp
eval-set-object/: CMakeLists.txt  README.md
eval-set-object-module/: CMakeLists.txt  README.md  set-bar.py
eval-set-object-module/python/: set-bar.py
eval-set-object-module/src/: foo.cpp  foo.h  main.cpp
eval-set-object/src/: main.cpp
qt-5-pyqt5/: README.md
qt-5-pyqt5/python/: set-bar.py
qt-5-pyqt5/src/: mainwindow.cpp  mainwindow.h  sample.cpp  sample.h  scripter.cpp  scripter.h  scripterAPI.h
qt5-pyqt5/: CMakeLists.txt  README.md
qt5-pyqt5/python/: set-bar.py
qt5-pyqt5/src/: main.cpp  mainwindow.cpp  scripterAPI.cpp  scripterAPI.h
qt5-signals/: README.md
scripter-api/: CMakeLists.txt  README.md
scripter-api/python/: set-bar.py
scripter-api/src/: main.cpp  scripter.cpp  scripter.h
scripter-api/src/sample/: document.h  margin.h  page.h
scripter-api/src/scripterAPI/: document.cpp  document.h  margin.cpp  margin.h  page.cpp  page.h  scripterAPI.cpp  scripterAPI.h
scripter-class/: CMakeLists.txt  README.md
scripter-class-in-class/: CMakeLists.txt  README.md
scripter-class-in-class/python/: set-bar.py
scripter-class-in-class/src/: bar.cpp  bar.h  foo.cpp  foo.h  main.cpp  scripter.cpp  scripter.h
scripter-class/src/: foo.cpp  foo.h  main.cpp  scripter.cpp
scripting/: CMakeLists.txt  README.md
scripting/src/: api-pet.cpp  main.cpp  pet.h
